// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. extracts to a div for simple views, flat transforms 1`] = `
<div
  className=" test1 _tr--hover-scalez2z _flSh-1 _flGr-1 _flDi-column _flBa-auto _di-flex _boSi-borderzbox _boSh-e8nksv _boToRiRa-100px _boToLeRa-100px _boBoRiRa-100px _boBoLeRa-100px _baCo-19sdxe _alIt-stretch"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`2. extracts className for complex views but keeps other props 1`] = `
Array [
  <div
    className="css-view-mht2lk _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden who _boSh-xgwarg _boBoLeRa-12px _boBoRiRa-12px _boToLeRa-12px _boToRiRa-12px _paBo-5px _paLe-5px _paRi-5px _paTo-5px r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
      }
    }
  />,
  <div
    className="css-view-mht2lk ease-in-out-top _paTo-2px _paBo-2px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _alIt-stretch _baCo-1d0hial _to-z14px _boSh-xgwarg _boBoLeRa-12px _boBoRiRa-12px _boToLeRa-12px _boToRiRa-12px _paLe-5px _paRi-5px r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
      }
    }
  >
    <span
      className=" _di-inline"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`2. extracts className for complex views but keeps other props 2`] = `
Array [
  <div
    className="css-view-mht2lk _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden who _boSh-xgwarg _boBoLeRa-12px _boBoRiRa-12px _boToLeRa-12px _boToRiRa-12px _paBo-5px _paLe-5px _paRi-5px _paTo-5px r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
      }
    }
  />,
  <div
    className="css-view-mht2lk ease-in-out-top _to-0px _paTo-2px _paBo-2px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _baCo-rhzyip _alIt-stretch _boSh-xgwarg _boBoLeRa-12px _boBoRiRa-12px _boToLeRa-12px _boToRiRa-12px _paLe-5px _paRi-5px r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
      }
    }
  >
    <span
      className=" _di-inline"
    >
      hello world
    </span>
  </div>,
]
`;

exports[`3. places className correctly given a single spread 1`] = `
Array [
  "css-view-mht2lk",
  "_alIt-stretch",
  "_boSi-borderzbox",
  "_di-flex",
  "_flBa-auto",
  "_flDi-column",
  "_flSh-zz",
  "_ovX-hidden",
  "_ovY-hidden",
  "r-alignItems-1oszu61",
  "r-boxSizing-deolkf",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
  "r-flexShrink-1q142lx",
]
`;

exports[`4. leaves dynamic variables 1`] = `
Array [
  "css-view-mht2lk",
  "_he-200px",
  "_flSh-zz",
  "_flDi-column",
  "_flBa-auto",
  "_di-flex",
  "_boSi-borderzbox",
  "_alIt-stretch",
  "_ovY--hover-visible",
  "_ovX--hover-visible",
  "r-alignItems-1oszu61",
  "r-boxSizing-deolkf",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
  "r-flexShrink-1q142lx",
]
`;

exports[`4. leaves dynamic variables 2`] = `
<div
  className="css-view-mht2lk  _he-200px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _alIt-stretch _ovY--hover-visible _ovX--hover-visible r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
  style={
    Object {
      "width": "calc(100% + 20px)",
    }
  }
/>
`;

exports[`5. spread conditional 1`] = `
<div
  className="_baCo-183yn7 _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden"
>
  <div
    className="_baCo-183yn7 _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden hello-world"
  />
</div>
`;

exports[`6. spread ternary 1`] = `
<div
  className="_baCo-183yn7 _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`6. spread ternary 2`] = `
<div
  className="_baCo-19sdxe _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _ovX-hidden _ovY-hidden"
>
  <span
    className=" _di-inline"
  >
    hello world
  </span>
</div>
`;

exports[`7. ternary + data-is 1`] = `
<div
  className=" _wi-66pct _paRi-11px _paLe-11px _paBo-10px _miWi-500px _maWi-30pct _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _alIt-stretch"
>
  <div
    className="_wi-10px _he-10px _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz"
  />
</div>
`;

exports[`8. styleExpansions 1`] = `
<div
  className="css-view-mht2lk  _to-0px _ri-0px _po-relative _le-0px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _bo-0px _alIt-stretch r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx r-position-u8s1d"
  style={
    Object {
      "bottom": "0px",
      "left": "0px",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className=" _po-absolute _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _baCo-19sdxe _alIt-stretch"
  >
    <div
      className="css-view-mht2lk  _to-0px _ri-0px _po-relative _le-0px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _bo-0px _baCo-1d0hial _alIt-stretch r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx r-position-u8s1d"
      style={
        Object {
          "bottom": "0px",
          "left": "0px",
          "right": "0px",
          "top": "0px",
        }
      }
    />
  </div>
</div>
`;

exports[`9. combines with classname 1`] = `
<div
  className=" _paTo-15px _paBo-15px _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _alIt-stretch home-top-dish"
/>
`;

exports[`10. extracts Text 1`] = `
<span
  className=" _foSi-10px _di-inline"
>
  <div
    className="css-text-1u9zv9r  _usSe-text _di-inline r-display-1471scf r-userSelect-1xnzce8"
    style={
      Object {
        "selectable": true,
      }
    }
  >
    <span
      className="css-text-1u9zv9r css-textHasAncestor-16my406 _di-inline _foSi-15px _foWe-600 _col-18s66rc r-display-xoduu5"
    >
      hello
    </span>
  </div>
</span>
`;

exports[`11. combines everything 1`] = `
Array [
  "css-view-mht2lk",
  "_baCo-183yn7",
  "_alIt-center",
  "_miHe-10px",
  "_ovX-hidden",
  "_ovY-hidden",
  "_po-relative",
  "_boToCo-dic8vh",
  "_boRiCo-1n8flkp",
  "_boLeCo-wse84g",
  "_boBoCo-1qvh775",
  "_boBoSt-solid",
  "_boBoWi-1px",
  "_boLeSt-solid",
  "_boLeWi-1px",
  "_boRiSt-solid",
  "_boRiWi-1px",
  "_boToSt-solid",
  "_boToWi-1px",
  "_boSi-borderzbox",
  "_di-flex",
  "_flBa-auto",
  "_flDi-column",
  "_flSh-zz",
  "_he-0px",
  "_boToRiRa-0px",
  "_boToLeRa-0px",
  "_boBoRiRa-0px",
  "_boBoLeRa-0px",
  "r-alignItems-1oszu61",
  "r-boxSizing-deolkf",
  "r-display-6koalj",
  "r-flexBasis-1mlwlqe",
  "r-flexDirection-eqz5dr",
  "r-flexShrink-1q142lx",
]
`;

exports[`12. ternary multiple on same key 1`] = `
<div
  className="_tr- _op-1 _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz"
/>
`;

exports[`14. extracts psuedo styles and evaluates constants 1`] = `
<div
  className=" _baCo--active-183yn7 _baCo--hover-19sdxe _flSh-zz _flDi-column _flBa-auto _di-flex _boSi-borderzbox _alIt-stretch"
/>
`;

exports[`15. extracts spacer (complex expansion) 1`] = `
Array [
  <div
    className=" _miWi-12px _miHe-12px _flSh-zz _fl-zz"
  />,
  <div
    className=" _miWi-10px _miHe-10px _flSh-zz _fl-1"
  />,
]
`;

exports[`16. deopt when spreading multiple 1`] = `
<div
  className="css-view-mht2lk _baCo-19sdxe _alIt-stretch _boSi-borderzbox _di-flex _flBa-auto _flDi-column _flSh-zz _flGr-1 r-alignItems-1oszu61 r-boxSizing-deolkf r-display-6koalj r-flexBasis-1mlwlqe r-flexDirection-eqz5dr r-flexShrink-1q142lx"
/>
`;
